...

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="cbt">E.coli - Aquagenx CBT</string>
    <string name="e_coli">E.coli</string>
    <string name="total_coliform">Total Coliform</string>
    <string name="prepare_sample">Prepare sample</string>
    <string name="cbt_compartments">CBT Compartments</string>

    <string name="read_instructions">Read Instructions</string>
    <string name="take_photo_compartments">Take a photo of the compartment bag</string>
    <string name="confidenceInterval">Upper 95&#37; Confidence Interval</string>
    <string name="confidenceIntervalTc">TC Upper 95&#37; Confidence Interval</string>
    <string name="setCompartmentColors">Set compartment colors</string>

    <string name="health_risk_category">Health Risk Category (Based on MPN and Confidence Interval)</string>
    <string name="recreational_health_risk_category">US EPA Recreational Health Risk Category Based on MPN and Upper 95&#37; Confidence Level</string>

    <string name="collect_10ml_water_sample">Collect <b>10 ml</b> water sample with Thio Bag (or bottle).</string>
    <string name="avoid_touching">Avoid touching the inside of the Thio Bag, lid or bottle.</string>
    <string name="open_growth_medium">Open growth medium sachet and add powder medium or test bud straight to the sample from the sachet</string>
    <string name="dissolve_medium_in_sample_a"><b>Powder medium:</b> Dissolve medium in sample for a few minutes. Gently swirl the bag several times until the medium is completely dissolved.</string>
    <string name="dissolve_medium_in_sample_b"><b>Test bud:</b> Dissolve medium in sample for 10 – 12 minutes maximum by periodically swirling the bottle or squeezing the test bud in the Thio Bag to promote release of the medium from its plastic carrier</string>
    <string name="when_medium_dissolved">When medium is completely dissolved, the water sample turns yellow.</string>
    <string name="leave_test_bud_carrier">When using a test bud, leave it in the Thio Bag or bottle while pouring.</string>
    <string name="prepare_area_put_on_gloves">Prepare the work area and put on plastic gloves.</string>
    <string name="collect_100ml_water_sample">Collect <b>100 ml</b> water sample with bottle or Thio Bag.</string>
    <string name="label_compartment_bag">Label bag and/or attach barcode asset tag to compartment bag.</string>
    <string name="tear_perforated_seam">Tear off perforated seam at top of the bag.</string>
    <string name="rub_sides_of_compartment">Rub sides at the top of each compartment to open the bag, use the white tabs at top of the bag to keep the bag open while pouring.</string>
    <string name="slowly_pour_sample_into_bag">Slowly pour sample into bag while gently tilting and squeezing bag to distribute sample amongst five compartments.</string>
    <string name="fill_evenly_across_bag"><b>Fill evenly across bag to the black fill line</b>.</string>
    <string name="attach_seal_clip">Attach seal clip across the bag above the fill line and below the compartment top openings.</string>
    <string name="snap_rod_shaped">Snap rod-shaped part of the clip from other side of bag into U-shape to lock in place across the bag.</string>
    <string name="roll_fold_bag">After attaching clip, bag can be kept vertical or horizontal.</string>
    <string name="close_top_of_bag">Close the top of the bag with the yellow Whirl-Pak seal and then roll down the bag toward the seal clip <b>(step 1)</b> and fold the yellow ends <b>(step 2)</b>.</string>
    <string name="let_incubate">Let the sample incubate, depending on the ambient temperature:</string>
    <string name="take_photo_of_incubated">Take photo of the incubated sample.</string>
    <string name="change_colors_to_match">In the next screen, change the colours in the interface to match the colours of the sample in the bag compartments.</string>
    <string name="click_compartments_to_change">Click the compartments to change colour.</string>
    <string name="note_blue_green_specks"><b>NOTE:</b> Any trace of blue or blue/green in a compartment indicates presence of E. coli, even just specks of blue/blue green color or just blue/blue green sediment at the bottom of a compartment.</string>
    <string name="add_free_chlorine">Add 1–2 mL of liquid bleach (NaOCl) or sufficient free chlorine tablets (calcium hypochlorite or sodium dichloroisocyanurate) to provide about 100 mg of free chlorine.</string>
    <string name="dispose_contents_bag">After 45 minutes, pour contents into a sink, toilet or hole in ground and safely dispose the empty compartment bag.</string>
    <string name="retain_plastic_seal_reuse">Retain plastic seal clip for reuse.</string>
    <string name="add_90ml_distilled_water">Add <b>90 ml</b> of distilled water to the water sample.</string>

    <string name="low_risk_safe">Low Risk / Safe</string>
    <string name="probably_safe">Intermediate Risk / Probably Safe</string>
    <string name="intermediate_possibly_safe">Intermediate Risk / Possibly Safe</string>
...

    <string name="temperature">Temperature</string>
    <string name="incubation_time">Incubation Time</string>
    <string name="temperature_35_37">35 – 37°C</string>
    <string name="temperature_31_34">31 – 34°C</string>
    <string name="temperature_25_30">25 – 30°C</string>
    <string name="below25Degrees">Below 25 °C</string>
    <string name="hours_20">20 hours</string>
    <string name="hours_24_30">24 – 30 hours</string>
    <string name="hours_40_48">40 – 48 hours</string>
    <string name="incubate_in_portable">Incubate in a portable incubator, preferably at 35 – 37 °C for 48 hours or put in or near another heat source.</string>
    <string name="in_addition_to_portable">In addition to portable incubators, samples can be maintained at 25°C to 44.5°C using: thermal coolers/bags; proximity to heat sources for humans and food; poultry or reptile incubator, or near refrigerator coils or room heating vents.</string>

    <string name="dissolve_medium_in_sample_tc">Dissolve medium in sample for a few minutes maximum by periodically swirling the Thio Bag</string>
    <string name="take_photo_incubated_tc">Take a photo of the incubated sample while shining with a UV light (365 nm) on the compartment bag in a dark environment.</string>
    <string name="note_total_coliform"><b>NOTE:</b> Compartments positive for E. coli are automatically also positive for Total Coliform and will be preselected in the next interface.</string>
    <string name="remember_to_shine">Remember to shine a UV light to observe the fluorescent blue colour (positive for Total Coliform).</string>
...
