...
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Common-->
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
...
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
...
    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>

    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="warning">Warning</string>
    <string name="notFound">Not Found</string>

    <string name="instructions">Instructions</string>

    <plurals name="minutes">
...
